--- a/index.html
+++ b/index.html
@@ -1,4 +1,13 @@
 <!DOCTYPE html>
+/*
+* POISsON - Probe in Solution Space
+*
+*
+* Copyright (c) 2015 Advanced Institute for Computational Science, RIKEN.
+* All rights reserved.
+*
+*/
+
 <html>
 <head>
   <title>WebGL View</title>
