Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -69,6 +69,8 @@ BSD lisence will be applied to the our original source code.</p>
 
 <p>本プログラムは、「ＳＩＰ（戦略的イノベーション創造プログラム）／革新的設計生産技術」の採択テーマ「全体俯瞰設計と製品設計の着想を支援するワークスペースの研究開発」に関する研究開発の一環で開発された。</p>
 
+<p><a href="https://github.com/SIPupstreamDesign/POISsON/blob/master/index.html">demo</a></p>
+
 
 
       <footer class="site-footer">
