--- a/index.html
+++ b/index.html
@@ -64,12 +64,15 @@ BSD lisence will be applied to the our original source code.</p>
 
 <p>Browse index.html by web browser. We confirmed operations on Chrome, Firefox, and Safari.</p>
 
+<h3>
+<a id="demonstration" class="anchor" href="#demonstration" aria-hidden="true"><span class="octicon octicon-link"></span></a>Demonstration</h3>
+
+<p><a href="https://github.com/SIPupstreamDesign/POISsON/blob/master/index.html">index.html</a></p>
+
 <h2>
 <a id="acknowledgment" class="anchor" href="#acknowledgment" aria-hidden="true"><span class="octicon octicon-link"></span></a>Acknowledgment</h2>
 
 <p>本プログラムは、「ＳＩＰ（戦略的イノベーション創造プログラム）／革新的設計生産技術」の採択テーマ「全体俯瞰設計と製品設計の着想を支援するワークスペースの研究開発」に関する研究開発の一環で開発された。</p>
-
-<p><a href="https://github.com/SIPupstreamDesign/POISsON/blob/master/index.html">demo</a></p>
 
 
 
