--- a/index.html
+++ b/index.html
@@ -62,12 +62,7 @@ BSD lisence will be applied to the our original source code.</p>
 <h2>
 <a id="how-to-use" class="anchor" href="#how-to-use" aria-hidden="true"><span class="octicon octicon-link"></span></a>How to use</h2>
 
-<p>Browse index.html by web browser. We confirmed operations on Chrome, Firefox, and Safari.</p>
-
-<h3>
-<a id="demonstration" class="anchor" href="#demonstration" aria-hidden="true"><span class="octicon octicon-link"></span></a>Demonstration</h3>
-
-<p><a href="https://github.com/SIPupstreamDesign/POISsON/blob/master/index.html">index.html</a></p>
+<p>Browse <a href="https://github.com/SIPupstreamDesign/POISsON/blob/master/index.html">index.html</a> by web browser. We confirmed operations on Chrome, Firefox, and Safari.</p>
 
 <h2>
 <a id="acknowledgment" class="anchor" href="#acknowledgment" aria-hidden="true"><span class="octicon octicon-link"></span></a>Acknowledgment</h2>
