Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ BSD lisence will be applied to the our original source code.</p>
 <h2>
 <a id="how-to-use" class="anchor" href="#how-to-use" aria-hidden="true"><span class="octicon octicon-link"></span></a>How to use</h2>
 
-<p>Browse <a href="https://github.com/SIPupstreamDesign/POISsON/blob/master/index.html">index.html</a> by web browser. We confirmed operations on Chrome, Firefox, and Safari.</p>
+<p>Download and unarchive zip file, and open index.html by web browser. We confirmed operations on Chrome, Firefox, and Safari.</p>
 
 <h2>
 <a id="acknowledgment" class="anchor" href="#acknowledgment" aria-hidden="true"><span class="octicon octicon-link"></span></a>Acknowledgment</h2>
