Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -46,8 +46,22 @@
 <p>Copyright (c) 2015 Advanced Institute for Computational Science, RIKEN.
 All rights reserved.</p>
 
-<p>This software product also includes other OSS source codes of MIT license (see remarks in source code).
+<p>This software product also includes other OSS source codes of MIT license (see following and remarks in source code).
 BSD lisence will be applied to the our original source code.</p>
+
+<h3>
+<a id="external-modules" class="anchor" href="#external-modules" aria-hidden="true"><span class="octicon octicon-link"></span></a>External Modules</h3>
+
+<ul>
+<li>jquery-1.11.2 (The jQuery Foundation)  jQuery License, <a href="http://jquery.com/">http://jquery.com/</a>
+</li>
+<li>Handsontable (Nextgen)  MIT License, <a href="http://handsontable.com/">http://handsontable.com/</a>
+</li>
+<li>jQuery Treeview (Jorn Zaefferer)  MIT License, <a href="http://bassistance.de/jquery-plugins/jquery-plugin-treeview/">http://bassistance.de/jquery-plugins/jquery-plugin-treeview/</a>
+</li>
+<li>Qatrix 1.1 (Angel Lai)  MIT License, <a href="http://qatrix.com/">http://qatrix.com/</a>
+</li>
+</ul>
 
 <h2>
 <a id="contributor" class="anchor" href="#contributor" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contributor</h2>
