Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -71,6 +71,8 @@ BSD lisence will be applied to the our original source code.</p>
 </li>
 <li>Tomohiro Kawabnabe</li>
 <li>Kentarou Oku</li>
+<li>Masaki   Sasaki</li>
+<li>Kazuma   Hatta</li>
 </ul>
 
 <h2>
